[gd_scene load_steps=3 format=2]

[ext_resource path="res://Juego/UI/BotonBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/UI/MenuPausa.gd" type="Script" id=2]

[node name="MenuPausa" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.607843 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -415.0
margin_top = -294.0
margin_right = 415.0
margin_bottom = 294.0

[node name="BotonContinuar" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 830.0
margin_bottom = 142.0
text = "continuar"

[node name="BotonReiniciar" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 146.0
margin_right = 830.0
margin_bottom = 288.0
text = "reiniciar nivel"

[node name="BotonMenu" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 292.0
margin_right = 830.0
margin_bottom = 434.0
text = "men√∫ principal"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 438.0
margin_right = 830.0
margin_bottom = 442.0

[node name="BotonSalir" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 446.0
margin_right = 830.0
margin_bottom = 588.0
text = "salir del juego"

[connection signal="pressed" from="VBoxContainer/BotonContinuar" to="." method="_on_BotonContinuar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonReiniciar" to="." method="_on_BotonReiniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonMenu" to="." method="_on_BotonMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
